# utmmmmm

./: .gitignore  CLAUDE.md  Cargo.toml  OPTIMIZATION_IDEAS.md  package-lock.json  package.json  utm_diagram.mmd  vite.config.ts
.disposables/: Dockerfile  claude.json  config.json
.githooks/: pre-commit  pre-push
.husky/: pre-commit
rust-utmmmmm/src/: compiled.rs  infinity.rs  main.rs  optimization_hints.rs  tests.rs  tm.rs  toy_machines.rs  utm.rs
scripts/: sort-utm-states-by-freq.ts  verify-nesting.ts
src/: App.css  App.tsx  SamplerPlatter.tsx  TuringMachineViewer.tsx  UTMTower.tsx  UTMViewer.tsx  code_assignment.rs  compiled.rs  delta.rs  empirical_transition_stats.rs  fast-run.ts  gen_utm.rs  infinite-utm.test.ts  infinite-utm.ts  infinity.rs  json_export.rs  lib.rs  my-utm-spec-gold-standard.test.ts  my-utm-spec.test.ts  my-utm-spec.ts  my-utm.test.ts  my-utm.ts  optimization_hints.rs  savepoint.rs  test-util.ts  tests.rs  tm.rs  tower.rs  toy-machines.test.ts  toy-machines.ts  toy_machines.rs  trace.ts  transition_tallies.rs  types.ts  usePlayPause.ts  useTuringMachine.ts  util.test.ts  util.ts  utm.rs  utm.test.ts  (+3 more)
ui/: .prettierignore  index.html  package-lock.json  package.json  vite.config.ts
ui/.husky/: pre-commit
ui/pkg/: package.json  utmmmmm.d.ts  utmmmmm.js  utmmmmm_bg.js
ui/pkg-node/: package.json  utmmmmm.d.ts  utmmmmm.js  utmmmmm_bg.wasm  utmmmmm_bg.wasm.d.ts
ui/public/: rust-export.json
ui/scripts/: generate-graphviz.ts  sort-utm-states-by-freq.ts  verify-nesting.ts
ui/src/: App.css  App.tsx  LogSlider.tsx  MachineExplorer.tsx  (+35 more)
