[package]
name = "utmmmmm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-only deps if needed
